# keys

./: pyproject.toml
Automated-Keyway-Modeling/: KeywayDetection.py
misc-extras/: kw1.scad  kw1.stl  sc1.stl
misc-extras/Giant_Cutaway_Pin_and_Tumbler_Lock_for_Teaching_Lock_Picking/: DemoLock_Cylinder.stl  DemoLock_Pick.stl  DemoLock_Pin1.stl  DemoLock_Pin2.stl  DemoLock_Pin3.stl  DemoLock_Pin4.stl  DemoLock_Pin5.stl  DemoLock_Pin6.stl  DemoLock_Pin7.stl  DemoLock_Pin8.stl  DemoLock_Pin9.stl  DemoLock_PinSpool.stl  DemoLock_Plug.stl  DemoLock_SpringRetainer.stl  DemoLock_TensionWrench.stl
