[tool.poetry]
name = "keys"
version = "0.1.0"
description = ""
authors = ["vagelim <gtfo@evangelosm.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ExifReader = "scikit-image"
ExifRead = "^2.3.2"
scikit-image = "^0.18.1"
matplotlib = "^3.4.2"
ipython = "^7.24.1"
pandas = "^1.2.4"
sympy = "^1.8"
nose = "^1.3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
